--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.0.0",
   "description": "A short description of your package",
   "keywords": [],
-  "activationCommands": {
-    "atom-workspace": "emp-tools:toggle"
-  },
+
   "repository": "https://github.com/atom/emp-tools",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "jquery": "^3.1.0",
     "fuzzaldrin": "^2.1",
     "minimatch": "~3.0.3",
     "atom-space-pen-views": "^2.0.2"
