--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "description": "A short description of your package",
   "keywords": [],
-
   "repository": "https://github.com/atom/emp-tools",
   "license": "MIT",
   "engines": {
@@ -14,6 +13,7 @@
     "jquery": "^3.1.0",
     "fuzzaldrin": "^2.1",
     "minimatch": "~3.0.3",
-    "atom-space-pen-views": "^2.0.2"
+    "atom-space-pen-views": "^2.0.2",
+    "underscore-plus": "*"
   }
 }
